third_party/move/move-compiler-v2/tests/checking/typing/block_with_statements_invalid2.exp

Diagnostics:
error: cannot adapt `integer` to annotated type `bool`
  ┌─ tests/checking/typing/block_with_statements_invalid2.move:4:23
  │
4 │         ({ let x = 0; x } : bool);
  │                       ^

error: cannot adapt `&_` to annotated type `u64`
  ┌─ tests/checking/typing/block_with_statements_invalid2.move:5:23
  │
5 │         ({ let x = 0; &x } : u64);
  │                       ^^

error: cannot adapt `&mut _` to annotated type `()`
  ┌─ tests/checking/typing/block_with_statements_invalid2.move:6:23
  │
6 │         ({ let y = 0; &mut (y + 1) } : ());
  │                       ^^^^^^^^^^^^

error: expected 2 items but found 3
  ┌─ tests/checking/typing/block_with_statements_invalid2.move:8:23
  │
8 │         ({ let x = 0; (x, false, false) } : (u64, bool));
  │                       ^^^^^^^^^^^^^^^^^
